--- a/src/styles/dailymotion.styl
+++ b/src/styles/dailymotion.styl
@@ -94,9 +94,11 @@ iframe
   &.show
     visibility: visible;
     &::before
+      visibility: visible;
       opacity: 1;
       transform: translateY(-50%) rotate(45deg);
     &::after
+      visibility: visible;
       opacity: 1;
       transform: translateY(-50%) rotate(-45deg);
 
