--- a/src/styles/dailymotion.styl
+++ b/src/styles/dailymotion.styl
@@ -74,6 +74,7 @@ iframe
   height: 64px;
   cursor: pointer;
   visibility: hidden;
+  backface-visibility: hidden;
   a
     display: block;
     height: 100%;
