--- a/src/styles/dailymotion.styl
+++ b/src/styles/dailymotion.styl
@@ -10,6 +10,10 @@ body
 a
   color: #000;
   display: inline-block;
+  transition: opacity 0.2s ease-in-out 0s;
+@media (hover: hover)
+  a:hover
+    opacity: 0.4;
 
 .loading
   background: #FFF;
