--- a/src/htmls/dailymotion/index.pug
+++ b/src/htmls/dailymotion/index.pug
@@ -18,6 +18,7 @@ html(lang="en")
     .container
       .container-inner
         h1 #{infos.name}
+        h2 Updated May 15, 2022 to June 21, 2022.
         p
           a(href="https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/tree/main/src/scripts/pages/dailymotion/days") Source Code
         ul
