--- a/src/styles/modules/common.styl
+++ b/src/styles/modules/common.styl
@@ -20,6 +20,12 @@
 html
   font-size: 62.5%;
 
+::before,
+::after
+  box-sizing: border-box;
+  border-style: solid;
+  border-width: 0;
+
 img
   max-width: 100%;
   width: 100%;
