--- a/src/styles/awards.styl
+++ b/src/styles/awards.styl
@@ -1,5 +1,8 @@
 @import './awards-components/reset.styl';
 @import './awards-components/load.styl';
 
+body
+  transform translate3d(0,0,0)
+
 .body-container
   overflow-x hidden
