--- a/src/styles/awards-components/load.styl
+++ b/src/styles/awards-components/load.styl
@@ -20,6 +20,7 @@ easeInQuint = cubic-bezier(0.755, 0.050, 0.855, 0.060)
       animation counter-animation-2 0.8s easeInQuint 0s 1 normal forwards running
     
     .counter.images-loaded.finished
+      transform scale(2, 2)
       span
         display inline-block
         opacity 1
