--- a/src/styles/awards-components/load.styl
+++ b/src/styles/awards-components/load.styl
@@ -1,7 +1,7 @@
 easeInQuint = cubic-bezier(0.755, 0.050, 0.855, 0.060)
 
 .load
-  background white
+  background #fff
   min-height 100vh
   min-height calc(var(--vh, 1vh) * 100);
   opacity 1
