--- a/src/styles/awards.styl
+++ b/src/styles/awards.styl
@@ -1,6 +1,9 @@
 @import './awards-components/reset.styl';
 @import './awards-components/load.styl';
 
+html
+  touch-action: manipulation;
+
 body
   transform translate3d(0,0,0)
 
