--- a/awards/components/header.html
+++ b/awards/components/header.html
@@ -1,192 +1,6 @@
-Html Webpack Plugin:
-<pre>
-  Error: Child compilation failed:
-  Module not found: Error: Can't resolve '/Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/src/htmls/  awards/components/footer.pug' in '/Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io'
-  ModuleNotFoundError: Module not found: Error: Can't resolve '/Users/toshiyamarukubo/study/git/toshiya-marukubo  .github.io/src/htmls/awards/components/footer.pug' in '/Users/toshiyamarukubo/study/git/toshiya-marukubo.githu  b.io'
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/Compilation.js:201  6:28
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:798:13
-      at eval (eval at create (/Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/tapable/  lib/HookCodeFactory.js:33:10), <anonymous>:10:1)
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:270:22
-      at eval (eval at create (/Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/tapable/  lib/HookCodeFactory.js:33:10), <anonymous>:9:1)
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:434:22
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:116:11
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:670:25
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:855:8
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:975:5
-  Module not found: Error: Can't resolve '/Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/src/htmls/  awards/components/header.pug' in '/Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io'
-  ModuleNotFoundError: Module not found: Error: Can't resolve '/Users/toshiyamarukubo/study/git/toshiya-marukubo  .github.io/src/htmls/awards/components/header.pug' in '/Users/toshiyamarukubo/study/git/toshiya-marukubo.githu  b.io'
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/Compilation.js:201  6:28
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:798:13
-      at eval (eval at create (/Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/tapable/  lib/HookCodeFactory.js:33:10), <anonymous>:10:1)
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:270:22
-      at eval (eval at create (/Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/tapable/  lib/HookCodeFactory.js:33:10), <anonymous>:9:1)
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:434:22
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:116:11
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:670:25
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:855:8
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:975:5
-  Module not found: Error: Can't resolve '/Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/src/htmls/  awards/components/layout.pug' in '/Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io'
-  ModuleNotFoundError: Module not found: Error: Can't resolve '/Users/toshiyamarukubo/study/git/toshiya-marukubo  .github.io/src/htmls/awards/components/layout.pug' in '/Users/toshiyamarukubo/study/git/toshiya-marukubo.githu  b.io'
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/Compilation.js:201  6:28
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:798:13
-      at eval (eval at create (/Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/tapable/  lib/HookCodeFactory.js:33:10), <anonymous>:10:1)
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:270:22
-      at eval (eval at create (/Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/tapable/  lib/HookCodeFactory.js:33:10), <anonymous>:9:1)
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:434:22
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:116:11
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:670:25
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:855:8
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:975:5
-  Module not found: Error: Can't resolve '/Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/src/htmls/  awards/components/main.pug' in '/Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io'
-  ModuleNotFoundError: Module not found: Error: Can't resolve '/Users/toshiyamarukubo/study/git/toshiya-marukubo  .github.io/src/htmls/awards/components/main.pug' in '/Users/toshiyamarukubo/study/git/toshiya-marukubo.github.  io'
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/Compilation.js:201  6:28
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:798:13
-      at eval (eval at create (/Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/tapable/  lib/HookCodeFactory.js:33:10), <anonymous>:10:1)
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:270:22
-      at eval (eval at create (/Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/tapable/  lib/HookCodeFactory.js:33:10), <anonymous>:9:1)
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:434:22
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:116:11
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:670:25
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:855:8
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:975:5
-  Module not found: Error: Can't resolve '/Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/src/htmls/  awards/components/script.pug' in '/Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io'
-  ModuleNotFoundError: Module not found: Error: Can't resolve '/Users/toshiyamarukubo/study/git/toshiya-marukubo  .github.io/src/htmls/awards/components/script.pug' in '/Users/toshiyamarukubo/study/git/toshiya-marukubo.githu  b.io'
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/Compilation.js:201  6:28
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:798:13
-      at eval (eval at create (/Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/tapable/  lib/HookCodeFactory.js:33:10), <anonymous>:10:1)
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:270:22
-      at eval (eval at create (/Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/tapable/  lib/HookCodeFactory.js:33:10), <anonymous>:9:1)
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:434:22
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:116:11
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:670:25
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:855:8
-      at /Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/node_modules/webpack/lib/NormalModuleFactor  y.js:975:5
-  
-  - Compilation.js:2016 
-    [toshiya-marukubo.github.io]/[webpack]/lib/Compilation.js:2016:28
-  
-  - NormalModuleFactory.js:798 
-    [toshiya-marukubo.github.io]/[webpack]/lib/NormalModuleFactory.js:798:13
-  
-  
-  - NormalModuleFactory.js:270 
-    [toshiya-marukubo.github.io]/[webpack]/lib/NormalModuleFactory.js:270:22
-  
-  
-  - NormalModuleFactory.js:434 
-    [toshiya-marukubo.github.io]/[webpack]/lib/NormalModuleFactory.js:434:22
-  
-  - NormalModuleFactory.js:116 
-    [toshiya-marukubo.github.io]/[webpack]/lib/NormalModuleFactory.js:116:11
-  
-  - NormalModuleFactory.js:670 
-    [toshiya-marukubo.github.io]/[webpack]/lib/NormalModuleFactory.js:670:25
-  
-  - NormalModuleFactory.js:855 
-    [toshiya-marukubo.github.io]/[webpack]/lib/NormalModuleFactory.js:855:8
-  
-  - NormalModuleFactory.js:975 
-    [toshiya-marukubo.github.io]/[webpack]/lib/NormalModuleFactory.js:975:5
-  
-  - Module not found: Error: Can't resolve '/Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/src/html    s/awards/components/header.pug' in '/Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io'
-  
-  - ModuleNotFoundError: Module not found: Error: Can't resolve '/Users/toshiyamarukubo/study/git/toshiya-maruku    bo.github.io/src/htmls/awards/components/header.pug' in '/Users/toshiyamarukubo/study/git/toshiya-marukubo.g    ithub.io'
-  
-  - Compilation.js:2016 
-    [toshiya-marukubo.github.io]/[webpack]/lib/Compilation.js:2016:28
-  
-  - NormalModuleFactory.js:798 
-    [toshiya-marukubo.github.io]/[webpack]/lib/NormalModuleFactory.js:798:13
-  
-  
-  - NormalModuleFactory.js:270 
-    [toshiya-marukubo.github.io]/[webpack]/lib/NormalModuleFactory.js:270:22
-  
-  
-  - NormalModuleFactory.js:434 
-    [toshiya-marukubo.github.io]/[webpack]/lib/NormalModuleFactory.js:434:22
-  
-  - NormalModuleFactory.js:116 
-    [toshiya-marukubo.github.io]/[webpack]/lib/NormalModuleFactory.js:116:11
-  
-  - NormalModuleFactory.js:670 
-    [toshiya-marukubo.github.io]/[webpack]/lib/NormalModuleFactory.js:670:25
-  
-  - NormalModuleFactory.js:855 
-    [toshiya-marukubo.github.io]/[webpack]/lib/NormalModuleFactory.js:855:8
-  
-  - NormalModuleFactory.js:975 
-    [toshiya-marukubo.github.io]/[webpack]/lib/NormalModuleFactory.js:975:5
-  
-  - Module not found: Error: Can't resolve '/Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/src/html    s/awards/components/layout.pug' in '/Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io'
-  
-  - ModuleNotFoundError: Module not found: Error: Can't resolve '/Users/toshiyamarukubo/study/git/toshiya-maruku    bo.github.io/src/htmls/awards/components/layout.pug' in '/Users/toshiyamarukubo/study/git/toshiya-marukubo.g    ithub.io'
-  
-  - Compilation.js:2016 
-    [toshiya-marukubo.github.io]/[webpack]/lib/Compilation.js:2016:28
-  
-  - NormalModuleFactory.js:798 
-    [toshiya-marukubo.github.io]/[webpack]/lib/NormalModuleFactory.js:798:13
-  
-  
-  - NormalModuleFactory.js:270 
-    [toshiya-marukubo.github.io]/[webpack]/lib/NormalModuleFactory.js:270:22
-  
-  
-  - NormalModuleFactory.js:434 
-    [toshiya-marukubo.github.io]/[webpack]/lib/NormalModuleFactory.js:434:22
-  
-  - NormalModuleFactory.js:116 
-    [toshiya-marukubo.github.io]/[webpack]/lib/NormalModuleFactory.js:116:11
-  
-  - NormalModuleFactory.js:670 
-    [toshiya-marukubo.github.io]/[webpack]/lib/NormalModuleFactory.js:670:25
-  
-  - NormalModuleFactory.js:855 
-    [toshiya-marukubo.github.io]/[webpack]/lib/NormalModuleFactory.js:855:8
-  
-  - NormalModuleFactory.js:975 
-    [toshiya-marukubo.github.io]/[webpack]/lib/NormalModuleFactory.js:975:5
-  
-  - Module not found: Error: Can't resolve '/Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/src/html    s/awards/components/main.pug' in '/Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io'
-  
-  - ModuleNotFoundError: Module not found: Error: Can't resolve '/Users/toshiyamarukubo/study/git/toshiya-maruku    bo.github.io/src/htmls/awards/components/main.pug' in '/Users/toshiyamarukubo/study/git/toshiya-marukubo.git    hub.io'
-  
-  - Compilation.js:2016 
-    [toshiya-marukubo.github.io]/[webpack]/lib/Compilation.js:2016:28
-  
-  - NormalModuleFactory.js:798 
-    [toshiya-marukubo.github.io]/[webpack]/lib/NormalModuleFactory.js:798:13
-  
-  
-  - NormalModuleFactory.js:270 
-    [toshiya-marukubo.github.io]/[webpack]/lib/NormalModuleFactory.js:270:22
-  
-  
-  - NormalModuleFactory.js:434 
-    [toshiya-marukubo.github.io]/[webpack]/lib/NormalModuleFactory.js:434:22
-  
-  - NormalModuleFactory.js:116 
-    [toshiya-marukubo.github.io]/[webpack]/lib/NormalModuleFactory.js:116:11
-  
-  - NormalModuleFactory.js:670 
-    [toshiya-marukubo.github.io]/[webpack]/lib/NormalModuleFactory.js:670:25
-  
-  - NormalModuleFactory.js:855 
-    [toshiya-marukubo.github.io]/[webpack]/lib/NormalModuleFactory.js:855:8
-  
-  - NormalModuleFactory.js:975 
-    [toshiya-marukubo.github.io]/[webpack]/lib/NormalModuleFactory.js:975:5
-  
-  - Module not found: Error: Can't resolve '/Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io/src/html    s/awards/components/script.pug' in '/Users/toshiyamarukubo/study/git/toshiya-marukubo.github.io'
-  
-  - ModuleNotFoundError: Module not found: Error: Can't resolve '/Users/toshiyamarukubo/study/git/toshiya-maruku    bo.github.io/src/htmls/awards/components/script.pug' in '/Users/toshiyamarukubo/study/git/toshiya-marukubo.g    ithub.io'
-  
-  - Compilation.js:2016 
-    [toshiya-marukubo.github.io]/[webpack]/lib/Compilation.js:2016:28
-  
-  - NormalModuleFactory.js:798 
-    [toshiya-marukubo.github.io]/[webpack]/lib/NormalModuleFactory.js:798:13
-  
-  
-</pre>
+
+<header>
+  <div class="header-container">
+    <h1>TITLE</h1>
+  </div>
+</header>
