--- a/src/styles/awards.styl
+++ b/src/styles/awards.styl
@@ -1,11 +1,13 @@
 @import './awards-components/reset.styl';
 @import './awards-components/load.styl';
+@import './awards-components/header.styl';
 
 html
   touch-action: manipulation;
 
 body
   transform translate3d(0,0,0)
+  letter-spacing 0.2rem
 
 .body-container
   overflow-x hidden
