--- a/src/htmls/awards/index.pug
+++ b/src/htmls/awards/index.pug
@@ -5,4 +5,5 @@ html(lang="en")
   body
     .body-container
       include ./components/load.pug
+      include ./components/header.pug
     script(src='../dist/js/awards.bundle.js')
