--- a/src/styles/modules/loading-dailymotion.styl
+++ b/src/styles/modules/loading-dailymotion.styl
@@ -44,8 +44,11 @@
       
 @keyframes rect-animation
   0%
-    opacity 1
+    opacity 0
     top -100%
+  50%
+    opacity 1
+    top 0
   100%
     opacity 0
     top 100%
